add-user-number-form

--- a/public/output/index.html
+++ b/public/output/index.html
@@ -9,6 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+
+      <form id="num" action="/output">
+        Team blue head count:<br>
+        <input type="text" name="blueNum" value="">
+        <br>
+        Team red head count:<br>
+        <input type="text" name="redNum" value="Mouse">
+        <br><br>
+        <input type="submit" value="Submit">
+      </form> 
+
     <script src="sketch.js"></script>
   </body>
 </html>
