--- a/public/output/index.html
+++ b/public/output/index.html
@@ -15,7 +15,7 @@
         <input type="text" name="blueNum" value="">
         <br>
         Team red head count:<br>
-        <input type="text" name="redNum" value="Mouse">
+        <input type="text" name="redNum" value="">
         <br><br>
         <input type="submit" value="Submit">
       </form> 
