update output and input file

--- a/public/output/index.html
+++ b/public/output/index.html
@@ -10,15 +10,14 @@
   </head>
   <body>
 
-      <form id="num" action="/output">
+      <form>
         Team blue head count:<br>
-        <input type="text" name="blueNum" value="">
+        <input id="numBlue" type="text" name="blueNum">
         <br>
         Team red head count:<br>
-        <input type="text" name="redNum" value="Mouse">
+        <input id="numRed" type="text" name="redNum">
         <br><br>
-        <input type="submit" value="Submit">
-      </form> 
+      </form>
 
     <script src="sketch.js"></script>
   </body>
