remove homepage img

--- a/public/input/index.html
+++ b/public/input/index.html
@@ -15,8 +15,8 @@
 
     <div id="startScreen">
 
-      <h1 class="instruction">This is a game</h1>
-        <div class = "homepageimg"></div>
+      <h1 class="instruction">High Knee</h1>
+        <!-- <div class = "homepageimg"></div> -->
         <button class="next" onclick="goToTeam()">Start</button>
     </div>
 
