--- a/public/output/index.html
+++ b/public/output/index.html
@@ -9,20 +9,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-
-      <form>
+      <CENTER>
+    <div class= "flex-container" style="justify-content: center;
+    ">
+        <div>
+      <form >
         Team blue head count:<br>
-        <input id="numBlue" type="text" name="blueNum">
-        <br>
+        <input style="  color: rgb(31, 85, 231);" id="numBlue" type="text" name="blueNum">
+      </form>
+    </div>
+    <div>
+      <form >
         Team red head count:<br>
-<<<<<<< HEAD
-        <input id="numRed" type="text" name="redNum">
-=======
-        <input type="text" name="redNum" value="">
->>>>>>> cc283e036e371c6906fcc905ca6cfa5e7e377cf4
+        <input style="  color: crimson;" id="numRed" type="text" name="redNum">
+        <!-- <input type="text" name="redNum" value=""> -->
         <br><br>
       </form>
-
+    </div>
+    </div>
+    </CENTER>
     <script src="sketch.js"></script>
   </body>
 </html>
